plugins {
    id 'java'
    id 'java-library'
    id 'eclipse'
    id 'idea'
}

idea {
    module {
        inheritOutputDirs = true
    }
}

//compatibility for reflection support
sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
    implementation fileTree(dir: 'lib', include: ['*.jar'])
    implementation group: 'com.google.guava', name: 'guava', version: '23.5-jre'
	implementation 'org.reflections:reflections:0.9.10'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
    implementation group: 'org.scala-lang', name: 'scala-library', version: '2.12.4'
    implementation group: 'com.orsonpdf', name: 'orsonpdf', version: '1.8'
    implementation group: 'com.object-refinery', name: 'orsoncharts', version: '1.7'
	testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
    implementation group: 'com.panayotis', name: 'javaplot', version: '0.5.0'
    implementation group: 'gov.nist.math', name: 'jama', version: '1.0.3'
    implementation group: 'com.googlecode.efficient-java-matrix-library', name: 'ejml', version: '0.25'
    implementation group: 'args4j', name: 'args4j', version: '2.33'
    implementation group: 'org.jfree', name: 'jfreesvg', version: '3.3'
    implementation group: 'org.jfree', name: 'swtgraphics2d', version: '1.0'
    implementation group: 'org.jfree', name: 'jcommon', version: '1.0.24'
    implementation group: 'org.javassist', name: 'javassist', version: '3.24.0-GA'
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.12.1'
    implementation group: 'org.apache.commons', name: 'commons-rng-simple', version: '1.4'
    implementation group: 'org.apache.commons', name: 'commons-rng-core', version: '1.4'
    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
    implementation 'org.jetbrains:annotations:13.0'
}

version = '1.0'

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes 'Implementation-Title': 'EARS',
                   'Implementation-Version': '1.0',
                   'Main-Class': 'org.um.feri.ears.engine.ExecuteTournaments'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } //include all dependencies in jar
    }
    exclude {
    	
    }
}

sourceSets {
    main {
        java {
            srcDir 'src'
        }
        resources {
            srcDirs 'Weight', 'test_data', 'src', 'res'
        }
   }
}

configurations {
    jar.archiveFileName = 'ears.jar'
}

